After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 726179 - Trivial Fix: size-allocate signal has missing documentation
Trivial Fix: size-allocate signal has missing documentation
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Documentation
3.11.x
Other Linux
: Normal trivial
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2014-03-12 15:30 UTC by Sebastian
Modified: 2014-04-13 21:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed patch (948 bytes, patch)
2014-04-08 21:10 UTC, Marcus Karlsson
committed Details | Review

Description Sebastian 2014-03-12 15:30:22 UTC
This is an easy fix. The documentation for the GtkWidgets::signals::size-allocate callback is missing a description for the allocation member.

https://developer.gnome.org/gtk3/unstable/GtkWidget.html#GtkWidget-size-allocate
Comment 1 Marcus Karlsson 2014-04-08 21:10:10 UTC
Created attachment 273838 [details] [review]
Proposed patch